[package]
name = "rusty_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
futures = "0.3.29"
termion = "2.0.3"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
uuid = { version = "1.6.1", features = ["v4"] }
